_posts/2025-01-08-UVM-code.md

--- a/_posts/2025-01-08-UVM-code.md
+++ b/_posts/2025-01-08-UVM-code.md
@@ -1,23 +1,20 @@
 ---
 layout: post
-title: UVM Practice(1) Simulating an Adder/Subtractor
+title: UVM Practice (1) Adder Verification
 date: 2025-01-08
 description: UVM Practice
-tags: UVM SystemVerilog
+tags: UVM SystemVerilog Verification
 categories: sample-posts
 featured: true
 ---
 
-
-This theme implements a built-in Jekyll feature, the use of Rouge, for syntax highlighting.
-It supports more than 100 languages.
-The keyword `linenos` triggers display of line numbers.
-Produces something like this:
-
+UVM Verification
 I fetched the example code, made some modifications, and executed the simulation on [EDA Playground](https://edaplayground.com).
 
 ### Block diagram
-
+      <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/blogimg/uvmpractice1_0.PNG" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
 
 
 ### Class env
