--- a/_posts/2025-01-08-UVM-code.md
+++ b/_posts/2025-01-08-UVM-code.md
@@ -16,7 +16,7 @@ I fetched the example code, made some modifications, and executed the simulation
 
 <div class="row mt-3">
   <div class="col-sm mt-3 mt-md-0">
-    {% include figure.liquid loading="eager" path="assets/blogimg/uvmpractice1_blockdiagram.PNG" class="img-fluid rounded z-depth-1" zoomable=true %}
+    {% include figure.liquid loading="eager" path="assets/blogimg/uvmpractice/1/uvmpractice1_bd.PNG" class="img-fluid rounded z-depth-1" zoomable=true %}
   </div>
 </div>
 <div class="caption">
@@ -28,126 +28,101 @@ I fetched the example code, made some modifications, and executed the simulation
 ### Class env
 
 ```verilog
-//----------------
-// environment env
-//----------------
 class env extends uvm_env;
 
-  virtual add_sub_if m_if;
+  virtual adder_if m_if;
 
   function new(string name, uvm_component parent = null);
     super.new(name, parent);
   endfunction
   
   function void connect_phase(uvm_phase phase);
-    `uvm_info("LABEL", "Started connect phase.", UVM_HIGH);
+    `uvm_info("INFO", "Started connect phase.", UVM_HIGH);
     // Get the interface from the resource database.
-    assert(uvm_resource_db#(virtual add_sub_if)::read_by_name(get_full_name(), "add_sub_if", m_if));
-    `uvm_info("LABEL", "Finished connect phase.", UVM_HIGH);
-
+    assert(uvm_resource_db#(virtual adder_if)::read_by_name(get_full_name(), "adder_if", m_if));
+    `uvm_info("INFO", "Finished connect phase.", UVM_HIGH);
   endfunction: connect_phase
 
   task run_phase(uvm_phase phase);
     phase.raise_objection(this);
-    `uvm_info("LABEL", "Started run phase.", UVM_HIGH);
+    `uvm_info("INFO", "Started run phase.", UVM_HIGH);
+    
     begin
-      int a = 8'h2, b = 8'h3;
+      int a = 8'd1, b = 8'd2;
       parameter int LOOP_COUNT = 10;
-      `uvm_info("LABEL", "Check Addition", UVM_HIGH);
+      `uvm_info("INFO", "Start ADDER Check", UVM_HIGH);
       for(int i=0;i<LOOP_COUNT;i++) begin
         @(m_if.cb);
         m_if.cb.a <= a;
         m_if.cb.b <= b;
-        m_if.cb.doAdd <= 1'b1; //Addition
+        #100;
+        m_if.cb.en <= 1'b1; //Enable
+        //#100;
         repeat(2) @(m_if.cb);
-        `uvm_info("RESULT", $sformatf("%0d + %0d = %0d", 
-         a, b, m_if.cb.result), UVM_LOW);
+        `uvm_info("RESULT", $sformatf("a=%0d b=%0d -> Sum=%0d", 
+         a, b, m_if.cb.sum), UVM_LOW);
         //assert checking the result
-        assert(m_if.cb.result == (a + b))
-          else `uvm_error("RESULT_ERR", $sformatf("Result Error! result=%0d, not %0d", m_if.cb.result, a+b));
+        assert(m_if.cb.sum == (a + b))
+          else `uvm_error("ERROR", $sformatf("Result Error! Result=%0d, not %0d", m_if.cb.sum, a+b));
         a = a + 1;
         b = b + 1;
-        `uvm_info("CHANGE VALUE", $sformatf("a=%0d, b=%0d", a, b), UVM_LOW);
+        `uvm_info("CHANGE", $sformatf("a=%0d, b=%0d", a, b), UVM_LOW);
       end
-      `uvm_info("LABEL", "Finish Check Addition", UVM_HIGH);      
-      #400;
-      b = 11;
-      `uvm_info("LABEL", "Check Substraction", UVM_HIGH);
-      for(int i=0;i<LOOP_COUNT;i++) begin
-        @(m_if.cb);
-        m_if.cb.a <= a;
-        m_if.cb.b <= b;
-        m_if.cb.doAdd <= 1'b0; //Substraction
-        repeat(2) @(m_if.cb);
-        `uvm_info("RESULT", $sformatf("%0d - %0d = %0d", 
-         a, b, m_if.cb.result), UVM_LOW);
-        //assert checking the result
-        assert(m_if.cb.result == (a - b))
-          else `uvm_error("RESULT_ERR", $sformatf("Result Error! result=%0d, not %0d", m_if.cb.result, a-b));
-        b = b - 1;
-        `uvm_info("CHANGE VALUE", $sformatf("a=%0d, b=%0d", a, b), UVM_LOW);
-      end
-      `uvm_info("LABEL", "Finish Check Substraction", UVM_HIGH);
+      `uvm_info("INFO", "Finished ADDER Check", UVM_HIGH);      
     end
-    `uvm_info("LABEL", "Finished run phase.", UVM_HIGH);
+    #400;
     phase.drop_objection(this);
   endtask: run_phase
-  
 endclass
 ```
 
-### DUT and Interface
+### Adder and Interface
 
 ```verilog
-// Simple adder/subtractor module
-module ADD_SUB(
-  input            clk,
-  input [7:0]      a0,
-  input [7:0]      b0,
+//8-bit Adder
+module ADDER(
+  input bit              clk,
+  input logic [7:0]      a0,
+  input logic [7:0]      b0,
   // if this is 1, add; else subtract
-  input            doAdd0,
-  output reg [8:0] result0
+  input logic           enable,
+  output reg [8:0] sum0
 );
 
   always @ (posedge clk)
     begin
-      if (doAdd0)
-        result0 <= a0 + b0;
+      if (enable)
+        sum0 <= a0 + b0;
       else
-        result0 <= a0 - b0;
+        sum0 <= 8'hx;
     end
 
-endmodule: ADD_SUB
+endmodule: ADDER
 
-//---------------------------------------
-// Interface for the adder/subtractor DUT
-//---------------------------------------
-interface add_sub_if(
+// Interface
+interface adder_if(
   input bit clk,
   input [7:0] a,
   input [7:0] b,
-  input       doAdd,
-  input [8:0] result
+  input       en,
+  input [8:0] sum
 );
 
   clocking cb @(posedge clk);
     output    a;
     output    b;
-    output    doAdd;
-    input     result;
-  endclocking // cb
+    output    en;
+    input     sum;
+  endclocking // clocking block
 
-endinterface: add_sub_if
+endinterface: adder_if
 
-//---------------
-// Interface bind
-//---------------
-bind ADD_SUB add_sub_if add_sub_if0(
+bind ADDER adder_if adder_if0(
   .clk(clk),
   .a(a0),
   .b(b0),
-  .doAdd(doAdd0),
-  .result(result0)
+  .en(enable),
+  .sum(sum0)
 );
 ```
 
@@ -158,20 +133,18 @@ import uvm_pkg::*;
 `include "uvm_macros.svh"
 `include "env.sv"
 
-//-----------
-// module top
-//-----------
+//Top
 module top;
 
   bit clk;
   env environment;
-  ADD_SUB dut(.clk (clk));
+  ADDER dut(.clk (clk));
 
   initial begin
     environment = new("env");
     // Put the interface into the resource database.
-    uvm_resource_db#(virtual add_sub_if)::set("env",
-      "add_sub_if", dut.add_sub_if0);
+    uvm_resource_db#(virtual adder_if)::set("env",
+      "adder_if", dut.adder_if0);
     clk = 0;
     run_test();
   end
@@ -197,7 +170,7 @@ endmodule
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.liquid loading="eager" path="assets/blogimg/uvmpractice1_1.PNG" class="img-fluid rounded z-depth-1" zoomable=true %}
+        {% include figure.liquid loading="eager" path="assets/blogimg/uvmpractice/1/uvmpractice1_1.PNG" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
 </div>
 <div class="caption">
@@ -208,16 +181,16 @@ endmodule
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.liquid loading="eager" path="assets/blogimg/uvmpractice1_2.PNG" class="img-fluid rounded z-depth-1" zoomable=true %}
+        {% include figure.liquid loading="eager" path="assets/blogimg/uvmpractice/1/uvmpractice1_2.PNG" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
       <div class="col-sm mt-3 mt-md-0">
-        {% include figure.liquid loading="eager" path="assets/blogimg/uvmpractice1_3.PNG" class="img-fluid rounded z-depth-1" zoomable=true %}
+        {% include figure.liquid loading="eager" path="assets/blogimg/uvmpractice/1/uvmpractice1_3.PNG" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
       <div class="col-sm mt-3 mt-md-0">
-        {% include figure.liquid loading="eager" path="assets/blogimg/uvmpractice1_4.PNG" class="img-fluid rounded z-depth-1" zoomable=true %}
+        {% include figure.liquid loading="eager" path="assets/blogimg/uvmpractice/1/uvmpractice1_4.PNG" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
       <div class="col-sm mt-3 mt-md-0">
-        {% include figure.liquid loading="eager" path="assets/blogimg/uvmpractice1_5.PNG" class="img-fluid rounded z-depth-1" zoomable=true %}
+        {% include figure.liquid loading="eager" path="assets/blogimg/uvmpractice/1/uvmpractice1_5.PNG" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
 </div>
 <div class="caption">
